--- a/manifest.json
+++ b/manifest.json
@@ -18,13 +18,6 @@
     "48": "images/icon48.png",
     "128": "images/icon128.png"
   },
-  "permissions": [
-    "tabs",
-    "scripting",
-    "storage",
-    "cookies"
-  ],
-  "host_permissions": [
-    "<all_urls>"
-  ]
+  "permissions": ["tabs", "scripting", "storage", "cookies"],
+  "host_permissions": ["<all_urls>"]
 }
