--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier": "npx prettier src --check",
+    "prettier:fix": "npm run prettier -- --write",
+    "lint": "npx eslint src",
+    "lint:fix": "npm run lint -- --fix",
+    "format": "npm run prettier:fix && npm run lint:fix"
   },
   "repository": {
     "type": "git",
@@ -26,6 +30,8 @@
   },
   "homepage": "https://github.com/Room-Elephant/extension-chrome-key-retriever#readme",
   "devDependencies": {
-    "prettier": "3.0.0"
+    "prettier": "^3.0.0",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0"
   }
 }
