add key retriever for analytics

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "appPage": "readonly",
     "versionController": "readonly",
     "chrome": "readonly",
-    "Analytics": "readonly"
+    "Analytics": "readonly",
+    "PREFIX": "readonly"
   }
 }
