feat: add google analytics config (#41)
Co-authored-by: JPedroBorges <JPedroBorges@users.noreply.github.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,8 @@
     "appManager": "readonly",
     "appPage": "readonly",
     "versionController": "readonly",
-    "chrome": "readonly"
+    "chrome": "readonly",
+    "appAnalytics": "readonly",
+    "analytics": "readonly"
   }
 }
