fix: decouple keyDetails from components

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "valueReader": "readonly",
     "valueWriter": "readonly",
     "TYPES": "readonly",
+    "addClassesToElement": "readonly",
     "appComponents": "readonly",
     "appCreator": "readonly",
     "appManager": "readonly",
