--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "prettier": "npx prettier src --check",
-    "lint": "npx eslint src"
+    "lint": "npx eslint src",
+    "build": "npm run prettier && npm run lint && webpack"
   },
   "repository": {
     "type": "git",
