--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -22,5 +22,5 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run Prettier with reviewdog
-        uses: EPMatt/reviewdog-action-prettier@v1.0.0k
+        uses: EPMatt/reviewdog-action-prettier@v1.0.0
           
