--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -13,3 +13,6 @@ jobs:
     steps:
       - name: Prettier Action
         uses: creyD/prettier_action@v4.3
+        with:
+          prettier_options: "src --write --config .prettierrc.json"
+          only_changed: true
