--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -14,4 +14,5 @@ jobs:
       - name: Prettier Action
         uses: creyD/prettier_action@v4.3
         with:
-          prettier_options: "src/**/*.{js,html,css} --write --config .prettierrc.json"
+          prettier_options: "--write --config .prettierrc.json"
+          only_changed: true
