--- a/package.json
+++ b/package.json
@@ -30,6 +30,12 @@
   "devDependencies": {
     "prettier": "^3.0.0",
     "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.8.0"
+    "eslint-config-prettier": "^8.8.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "terser-webpack-plugin": "^5.3.9",
+    "html-minimizer-webpack-plugin": "^4.4.0",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "mini-css-extract-plugin": "^2.7.6",
+    "uglify-js": "^3.17.4"
   }
 }
