--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "prettier": "^3.0.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
     "copy-webpack-plugin": "^11.0.0",
     "terser-webpack-plugin": "^5.3.9",
     "html-minimizer-webpack-plugin": "^4.4.0",
