feat: add build with webpack (#69)
Co-authored-by: Mariana Rodrigues <mariana.cf.rodrigues.95@gmail.com>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "prettier": "npx prettier src --check",
-    "lint": "npx eslint src"
+    "lint": "npx eslint src",
+    "build": "npm run prettier && npm run lint && webpack"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,14 @@
   "devDependencies": {
     "prettier": "^3.0.0",
     "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.8.0"
+    "eslint-config-prettier": "^8.8.0",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "copy-webpack-plugin": "^11.0.0",
+    "terser-webpack-plugin": "^5.3.9",
+    "html-minimizer-webpack-plugin": "^4.4.0",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "mini-css-extract-plugin": "^2.7.6",
+    "uglify-js": "^3.17.4"
   }
 }
