Add release workflow
Introduces a GitHub Actions workflow for releases, enabling versioned builds and automated GitHub releases.

Simplifies build scripts in package.json by removing lint and prettier steps from build commands.

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,8 +1,10 @@
 name: "CodeQL"
 
 on:
-  schedule:
-    - cron: '0 21 * * 5'
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   analyze:
