--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "eslint-config-prettier": "^8.8.0",
     "html-minimizer-webpack-plugin": "^4.4.0",
     "mini-css-extract-plugin": "^2.7.6",
-    "prettier": "^3.0.0",
+    "prettier": "3.0.0",
     "terser-webpack-plugin": "^5.3.9",
     "uglify-js": "^3.17.4",
     "webpack": "^5.88.2",
