fix bumping manifest version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,9 +50,11 @@ jobs:
       - name: Update package.json version
         run: |
           npm version ${{ github.event.inputs.releaseVersion }} --no-git-tag-version
+          jq --arg v "${{ github.event.inputs.releaseVersion }} '.version = $v' manifest.json > tmp.$$.json && mv tmp.$$.json manifest.json
           git config user.email "actions@github.com"
           git config user.name "GitHub Actions"
           git add package.json
+          git add manifest.json
           git commit -m "chore: release v${{ github.event.inputs.releaseVersion }}"
           git push
 
