--- a/package.json
+++ b/package.json
@@ -30,12 +30,17 @@
   "homepage": "https://github.com/Room-Elephant/extension-chrome-key-retriever#readme",
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^5.0.1",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "html-minimizer-webpack-plugin": "^4.4.0",
     "mini-css-extract-plugin": "^2.7.6",
-    "prettier": "^3.0.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-organize-attributes": "^1.0.0",
+    "sass": "^1.89.2",
+    "sass-loader": "^16.0.5",
+    "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.9",
     "uglify-js": "^3.17.4",
     "webpack": "^5.88.2",
