feat: add typescript support (#107)
Co-authored-by: JPedroBorges <JPedroBorges@users.noreply.github.com>
Co-authored-by: Mariana Rodrigues <mariana.cf.rodrigues.95@gmail.com>

--- a/package.json
+++ b/package.json
@@ -29,14 +29,19 @@
   },
   "homepage": "https://github.com/Room-Elephant/extension-chrome-key-retriever#readme",
   "devDependencies": {
+    "@types/chrome": "^0.0.245",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-minimizer-webpack-plugin": "^5.0.1",
-    "eslint": "^8.45.0",
+    "eslint": "^8.49.0",
     "eslint-config-prettier": "^8.8.0",
     "html-minimizer-webpack-plugin": "^4.4.0",
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "3.0.0",
     "terser-webpack-plugin": "^5.3.9",
+    "ts-loader": "^9.4.4",
+    "typescript": "^5.2.2",
     "uglify-js": "^3.17.4",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
