fix eslint job to check .ts files

--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -27,7 +27,7 @@ jobs:
         run: |
           npx eslint . \
             --config .eslintrc.json \
-            --ext .js \
+            --ext .ts \
             --format @microsoft/eslint-formatter-sarif \
             --output-file eslint-results.sarif
         continue-on-error: true
