--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,4 +1,4 @@
-name: ESLint
+name: CI
 
 on:
   push:
@@ -14,6 +14,7 @@ jobs:
       contents: read
       security-events: write
       actions: read 
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -41,3 +42,19 @@ jobs:
         with:
           sarif_file: eslint-results.sarif
           wait-for-processing: true
+
+  prettier:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ github.head_ref }}
+          fetch-depth: 0
+
+      - name: Prettify code
+        uses: creyD/prettier_action@v4.3
+        with:
+          prettier_options: --write --config .prettierrc.json src/**/*.{js,html,css}
+          only_changed: True
