--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
+    "watchDev": "webpack --config webpack.chrome.dev.js --watch",
     "prettier": "npx prettier src --check",
     "lint": "npx eslint src",
     "buildChrome": "webpack --config webpack.chrome.js",
