chore(KR-121): add typescript (#123)
Co-authored-by: Rúben França <ruben_tiagof@hotmail.com>
Co-authored-by: JPedroBorges <JPedroBorges@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
   },
   "homepage": "https://github.com/Room-Elephant/extension-chrome-key-retriever#readme",
   "devDependencies": {
+    "@microsoft/eslint-formatter-sarif": "^3.1.0",
+    "@types/chrome": "^0.0.245",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
     "copy-webpack-plugin": "^11.0.0",
     "css-minimizer-webpack-plugin": "^5.0.1",
     "eslint": "^8.45.0",
@@ -37,6 +41,8 @@
     "mini-css-extract-plugin": "^2.7.6",
     "prettier": "3.0.0",
     "terser-webpack-plugin": "^5.3.9",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.8.3",
     "uglify-js": "^3.17.4",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
