--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -18,11 +18,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install ESLint
-        run: |
-          npm install eslint@8.45.0
-          npm install @microsoft/eslint-formatter-sarif@2.1.7
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
 
+      - name: Install dependencies
+        run: npm ci
+        
       - name: Run ESLint
         run: npx eslint .
           --config .eslintrc.json
@@ -36,3 +40,4 @@ jobs:
         with:
           sarif_file: eslint-results.sarif
           wait-for-processing: true
+	
